# tender-hack-2022

./: Makefile  default.profraw  docker-compose.yml  pyproject.toml
deployment/server/: Dockerfile
ds/: .gitignore  model.py  models.ipynb
scripts/: __init__.py
scripts/dev/: __init__.py  clear_index.sh  delete_index.sh
scripts/maintenance/: check_es.py  create_indices.py  upload_data.py
server/: api.py  base_schemas.py  main.py  settings.py
server/common/: logger.py  types.py  utils.py
server/database/elastic/: __init__.py  connection.py  documents.py
server/database/postgres/: __init__.py  models.py
server/database/postgres/alembic/: env.py
server/routes/: __init__.py  search.py  search_schemas.py  test.py
