[tool.poetry]
name = "tender-api"
version = "0.1.0"
description = ""
authors = [
    "Igor Beschastnov <beschasnovigor@gmail.com",
]

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
# For scripts
colorama = "^0.4.4"
inquirer = "^2.9.1"
click = "^8.0.4"
# Main
ujson = "^5.5"  # used by pydantic for parsing
orjson = "^3.8"
fastapi = "^0.85.1"
loguru = "^0.5.3"
pydantic = "^1.10"
uvicorn = {extras = ["standard"], version ="^0.19.0"}
websockets = "^10.3"
elasticsearch = {extras = ["async"], version = "^8.4.3"}
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
arq = "^0.24.0"
sentence-transformers = "2.2.2"

[tool.poetry.dev-dependencies]
autoflake = "^1.7"
black = "^22"
isort = "^5.10.0"
mypy = "^0.982"

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
allow_redefinition = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pylint.'MESSAGES CONTROL']
fail-under = 10
disable = [
    "import-error",
    "too-few-public-methods",
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "redefined-outer-name",
    "no-name-in-module",
]
ignored-classes = [
    "contextlib.closing",
    "sqlalchemy.orm.scoping.scoped_session",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --log-level=DEBUG --cov=server"
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    ".venv/*",
    " tests/*",
    "**/__main__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
lines_after_imports = 1
known_first_party = [
    "settings",
    "database",
    "common",
    "utils",
    "schemas",
]

[tool.black]
line-length = 100
skip-string-normalization = true